# ticket-triage

./: .env.example  .gitignore  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: config.py  db.py  deps.py  errors.py  logging.py  main.py  models.py  prompts.py
app/routers/: health.py  reviews.py  rules.py  stats.py  tickets.py  webhooks.py
app/schemas/: errors.py  reviews.py  rules.py  stats.py  tickets.py  triage.py
app/services/: classifier.py  export.py  llm_client.py  routing.py  stats.py  worker.py
benchmarks/: pipeline.py
docs/: PRD.md  api-contracts.md  architecture.md  design.md  launch-checklist.md  memory.md  phases.md  rules.md  testing.md
evals/: baseline.json  dataset.jsonl  fixtures.jsonl  run.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_init.py  0002_seed_routing_rules.py
scripts/: demo.sh  demo_server.py
tests/: conftest.py  test_auth.py  test_classifier.py  test_eval_runner.py  test_health.py  test_ingestion.py  test_llm_client.py  test_reviews.py  test_routing.py  test_rules_api.py  test_stats.py  test_worker.py
