[project]
name = "ticket-triage"
version = "0.1.0"
description = "HTTP service that triages inbound support tickets with an LLM provider API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.133.0",
    "uvicorn==0.34.3",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    "httpx==0.28.1",
]

[project.optional-dependencies]
prod = ["psycopg[binary]==3.3.4"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.8.6",
    "black==26.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "evals"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI relies on callables in argument defaults for dependency injection.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning"]
